testsuite/tests/ghc-regress/typecheck/should_fail/all.T
 
test('tcfail001', normal, compile_fail, [''])
test('tcfail002', normal, compile_fail, [''])
test('tcfail003', normal, compile_fail, [''])
test('tcfail004', normal, compile_fail, [''])
test('tcfail005', normal, compile_fail, [''])
test('tcfail006', normal, compile_fail, [''])
test('tcfail007', normal, compile_fail, [''])
test('tcfail008', normal, compile_fail, [''])
test('tcfail009', normal, compile_fail, [''])
test('tcfail010', normal, compile_fail, [''])
test('tcfail011', normal, compile_fail, [''])
test('tcfail012', normal, compile_fail, [''])
test('tcfail013', normal, compile_fail, [''])
test('tcfail014', normal, compile_fail, [''])
test('tcfail015', normal, compile_fail, [''])
test('tcfail016', normal, compile_fail, [''])
test('tcfail017', normal, compile_fail, [''])
test('tcfail018', normal, compile_fail, [''])
test('tcfail019', normal, compile_fail, [''])
test('tcfail020', normal, compile_fail, [''])
test('tcfail021', normal, compile_fail, [''])
test('tcfail023', normal, compile_fail, [''])
test('tcfail027', normal, compile_fail, [''])
test('tcfail028', normal, compile_fail, [''])
test('tcfail029', normal, compile_fail, [''])
test('tcfail030', expect_fail_if_compiler_type('hugs'), compile_fail, [''])
test('tcfail031', normal, compile_fail, [''])
test('tcfail032', normal, compile_fail, [''])
test('tcfail033', normal, compile_fail, [''])
test('tcfail034', normal, compile_fail, [''])
test('tcfail035', normal, compile_fail, [''])
test('tcfail036', normal, compile_fail, [''])
test('tcfail037', normal, compile_fail, [''])
test('tcfail038', normal, compile_fail, [''])
test('tcfail040', normal, compile_fail, [''])
test('tcfail042', normal, compile_fail, [''])
test('tcfail043', normal, compile_fail, [''])
test('tcfail044', normal, compile_fail, [''])
test('tcfail046', normal, compile_fail, [''])
test('tcfail047', normal, compile_fail, [''])
test('tcfail048', normal, compile_fail, [''])
test('tcfail049', normal, compile_fail, [''])
test('tcfail050', normal, compile_fail, [''])
test('tcfail051', normal, compile_fail, [''])
test('tcfail052', normal, compile_fail, [''])
test('tcfail053', normal, compile_fail, [''])
test('tcfail054', normal, compile_fail, [''])
test('tcfail055', normal, compile_fail, [''])
test('tcfail056', normal, compile_fail, [''])
test('tcfail057', normal, compile_fail, [''])
test('tcfail058', normal, compile_fail, [''])
test('tcfail061', normal, compile_fail, [''])
test('tcfail062', normal, compile_fail, [''])
test('tcfail063', normal, compile_fail, [''])
test('tcfail065', normal, compile_fail, [''])
test('tcfail067', normal, compile_fail, [''])
test('tcfail068', only_compiler_types(['ghc']), compile_fail, ['-fglasgow-exts'])
test('tcfail069', normal, compile_fail, [''])
test('tcfail070', normal, compile_fail, [''])
test('tcfail071', normal, compile_fail, [''])
test('tcfail072', normal, compile_fail, [''])
test('tcfail073', normal, compile_fail, [''])
test('tcfail075', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail076', normal, compile_fail, [''])
test('tcfail077', normal, compile_fail, [''])
test('tcfail078', normal, compile_fail, [''])
test('tcfail079', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail080', expect_fail_if_compiler_type('ghc'), compile_fail, ['-fglasgow-exts'])
test('tcfail082', normal, compile_fail, [''])
test('tcfail083', normal, compile_fail, [''])
test('tcfail084', normal, compile_fail, [''])
test('tcfail085', normal, compile_fail, [''])
test('tcfail086', normal, compile_fail, [''])
test('tcfail087', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail088', normal, compile_fail, [''])
test('tcfail089', normal, compile_fail, [''])
test('tcfail090', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail091', normal, compile_fail, [''])
test('tcfail092', normal, compile_fail, [''])
test('tcfail093', normal, compile_fail, [''])
test('tcfail094', normal, compile_fail, [''])
test('tcfail095', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail096', normal, compile_fail, [''])
test('tcfail097', normal, compile_fail, [''])
test('tcfail098', normal, compile_fail, [''])
test('tcfail099', normal, compile_fail, [''])
test('tcfail100', normal, compile_fail, [''])
test('tcfail101', normal, compile_fail, [''])
test('tcfail102', normal, compile_fail, [''])
test('tcfail103', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail104', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail105', expect_fail, compile_fail, [''])
test('tcfail106', normal, compile_fail, [''])
test('tcfail107', normal, compile_fail, [''])
test('tcfail108', normal, compile_fail, [''])
test('tcfail109', normal, compile_fail, [''])
test('tcfail110', normal, compile_fail, [''])
test('tcfail111', normal, compile_fail, [''])
test('tcfail112', normal, compile_fail, [''])
test('tcfail113', normal, compile_fail, [''])
test('tcfail114', normal, compile_fail, [''])
test('tcfail115', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail116', normal, compile_fail, [''])
test('tcfail117', normal, compile_fail, [''])
test('tcfail118', normal, compile_fail, [''])
test('tcfail119', normal, compile_fail, [''])
test('tcfail121', normal, compile_fail, [''])
test('tcfail122', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail123', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail124', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail125', normal, compile_fail, [''])
test('tcfail126', normal, compile_fail, [''])
test('tcfail127', normal, compile_fail, [''])
test('tcfail128', normal, compile_fail, [''])
test('tcfail129', normal, compile_fail, [''])
test('tcfail130', normal, compile_fail, [''])
test('tcfail131', normal, compile_fail, [''])
test('tcfail132', normal, compile_fail, [''])
test('tcfail133', only_compiler_types(['ghc']), compile_fail, [''])
test('tcfail134', normal, compile_fail, [''])
test('tcfail135', normal, compile_fail, [''])
test('tcfail136', normal, compile_fail, [''])
test('tcfail137', normal, compile_fail, [''])
test('tcfail138', normal, compile_fail, [''])
test('tcfail139', normal, compile_fail, [''])
